--- a/home.html
+++ b/home.html
@@ -199,7 +199,7 @@
 
       <!-- New Proudly Local card -->
       <div class="event-card">
-        <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=800&q=80" alt="Proudly Local">
+        <img src="proudly local.png" alt="Proudly Local">
         <h3>Proudly Local</h3>
         <p>We proudly support local producers, from food to drinks, bringing the best of the New Forest to your table.</p>
         <a href="local.html" class="btn">Discover Our Local Partners</a>
