--- a/home.html
+++ b/home.html
@@ -246,6 +246,58 @@
     </div>
   </section>
 
+  <!-- About Us Banner -->
+<section class="about-banner">
+  <div class="about-content">
+    <h2>About Country Inns</h2>
+    <p>
+      Country Inns is a family of 7 pubs in the New Forest, each with its own character 
+      but sharing a love of local food, drink, and community.
+    </p>
+    <a href="about.html" class="about-btn">Read More</a>
+  </div>
+</section>
+
+<style>
+  .about-banner {
+    background: linear-gradient(135deg, #2e472e, #1e2b1e);
+    color: #f4f4f4;
+    text-align: center;
+    padding: 3rem 1.5rem;
+    border-radius: 12px;
+    margin: 2rem auto;
+    max-width: 1000px;
+  }
+
+  .about-banner h2 {
+    margin-bottom: 1rem;
+    font-size: 2rem;
+    color: #e6d8b5;
+  }
+
+  .about-banner p {
+    max-width: 700px;
+    margin: 0 auto 1.5rem;
+    font-size: 1.1rem;
+    line-height: 1.6;
+  }
+
+  .about-btn {
+    display: inline-block;
+    background-color: #2e7d32;
+    color: #fff;
+    padding: 12px 24px;
+    border-radius: 8px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+  }
+
+  .about-btn:hover {
+    background-color: #1b5e20;
+  }
+</style>
+
   <!-- Footer -->
   <footer>
     <p>&copy; 2025 Country Inns | Proudly serving the New Forest</p>
