--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us | Country Inns</title>
+  <title>About Us - Country Inns</title>
   <link rel="stylesheet" href="style.css">
   <style>
     body {
@@ -11,88 +11,57 @@
       margin: 0;
       background: linear-gradient(180deg, #2e472e, #1e2b1e);
       color: #f4f4f4;
-      text-align: center;
+      line-height: 1.6;
     }
 
     header {
-      padding: 1.5rem;
+      padding: 2rem 1rem;
       background: rgba(34, 49, 34, 0.9);
       color: #e6d8b5;
+      text-align: center;
     }
 
-    h1 {
+    header h1 {
       margin: 0;
-      font-size: 2rem;
+      font-size: 2.2rem;
     }
 
-    .content {
+    main {
       max-width: 900px;
       margin: 2rem auto;
-      padding: 1rem;
-      background: #2e472e;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-      text-align: left;
+      padding: 0 1rem;
     }
 
-    .content h2 {
+    section {
+      margin-bottom: 2rem;
+      background: #2e472e;
+      padding: 1.5rem;
+      border-radius: 12px;
+    }
+
+    section h2 {
       color: #e6d8b5;
       margin-top: 0;
     }
 
-    .content p {
-      line-height: 1.6;
-      font-size: 1.05rem;
-      margin-bottom: 1.2rem;
-    }
-
-    .values {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
-      margin-top: 2rem;
-    }
-
-    .value-card {
-      background: #3a5a3a;
-      padding: 1rem;
-      border-radius: 10px;
-      text-align: center;
-      transition: transform 0.2s ease;
-    }
-
-    .value-card:hover {
-      transform: translateY(-5px);
-    }
-
-    .value-card h3 {
-      color: #e6d8b5;
-      margin-bottom: 0.5rem;
-    }
-
-    .value-card p {
-      font-size: 0.95rem;
-      color: #f4f4f4;
-    }
-
     .buttons {
-      margin: 2rem auto;
       text-align: center;
+      margin: 3rem 0;
     }
 
     .buttons a {
       display: inline-block;
-      background: #3c5a3c;
+      background: #2e7d32;
       color: #fff;
-      text-decoration: none;
-      padding: 0.9rem 1.5rem;
+      padding: 0.8rem 1.5rem;
       border-radius: 8px;
+      text-decoration: none;
       font-weight: bold;
-      transition: background 0.3s;
+      transition: background 0.3s ease;
     }
 
     .buttons a:hover {
-      background: #4f7c4f;
+      background: #1b5e20;
     }
   </style>
 </head>
@@ -102,32 +71,40 @@
   </header>
 
   <main>
-    <div class="content">
-      <h2>Who We Are</h2>
+    <section>
       <p>
-        Country Inns is a family of seven pubs in the heart of the New Forest.  
-        Each pub has its own charm and personality, but all share the same love of local produce, warm hospitality, and community spirit.
+        Country Inns is a distinguished collection of 7 traditional pubs in the New Forest and surrounding areas. 
+        Each pub has its own character, but all share a love of <strong>local food, drink, and community.</strong>
       </p>
+    </section>
 
+    <section>
+      <h2>Our Story</h2>
       <p>
-        From cosy country inns to vibrant village pubs, our venues are the perfect place to enjoy locally sourced food and drink, celebrate special moments, or simply relax with friends and family.
+        Our establishments are known for their warm hospitality, freshly prepared homemade food, 
+        and a fine selection of local real ales. We take pride in sourcing ingredients locally and 
+        preparing dishes on-site to ensure the highest quality for our guests.
       </p>
+    </section>
 
-      <div class="values">
-        <div class="value-card">
-          <h3>🍽 Local Food</h3>
-          <p>We partner with New Forest farmers, bakers, and brewers to bring you fresh, seasonal flavours.</p>
-        </div>
-        <div class="value-card">
-          <h3>🍻 Community</h3>
-          <p>Our pubs are more than places to eat and drink — they’re a hub for local events and gatherings.</p>
-        </div>
-        <div class="value-card">
-          <h3>🌿 Heritage</h3>
-          <p>Rooted in tradition, each pub reflects the unique character and history of its village.</p>
-        </div>
-      </div>
-    </div>
+    <section>
+      <h2>A Perfect Place to Pause</h2>
+      <p>
+        Ideally situated for those exploring the natural beauty of the New Forest, 
+        our pubs are welcoming rest stops for walkers, cyclists, dog owners, and horse riders. 
+        Whether you’re after a hearty meal, a refreshing drink, or a comfortable place to stay, 
+        you’ll find rustic charm and modern comfort in every Country Inn.
+      </p>
+    </section>
+
+    <section>
+      <h2>Our Promise</h2>
+      <p>
+        At Country Inns, we are committed to providing exceptional service and creating 
+        memorable experiences for all our guests. We invite you to visit any of our locations 
+        and discover the unique character and hospitality that define us.
+      </p>
+    </section>
 
     <div class="buttons">
       <a href="home.html">⬅ Back to Home</a>
