--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
   <main>
     <section>
       <p>
-        Country Inns is a distinguished collection of 7 traditional pubs in the New Forest and surrounding areas. 
+        Country Inns is a distinguished collection of traditional pubs in the New Forest and surrounding areas. 
         Each pub has its own character, but all share a love of <strong>local food, drink, and community.</strong>
       </p>
     </section>
