--- a/home.html
+++ b/home.html
@@ -251,7 +251,7 @@
   <div class="about-content">
     <h2>About Country Inns</h2>
     <p>
-      Country Inns is a family of 7 pubs in the New Forest, each with its own character 
+      Country Inns is a family of traditional pubs in the New Forest, each with its own character 
       but sharing a love of local food, drink, and community.
     </p>
     <a href="about.html" class="about-btn">Read More</a>
