--- a/home.html
+++ b/home.html
@@ -171,6 +171,7 @@
         <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1?auto=format&fit=crop&w=800&q=80" alt="Festive Feast">
         <h3>Festive Feast</h3>
         <p>Book early (before the 1st of November) & save £5 per head on our December Festive Feast Menu.</p>
+         <a href="festivefeast.html" class="btn">Find Out More</a>
       </div>
 
       <div class="event-card">
