--- a/festivefeast.html
+++ b/festivefeast.html
@@ -29,15 +29,11 @@
 <body>
   <!--
     This file expects the poster image to be located at the root and named exactly:
-    "£5 OFF.png"
-
-    Some servers/hosts don't like special characters in filenames. If you have issues
-    loading the image, try renaming it to: "pound-5-off.png" and update the src.
+    "5POUNDSOFF.png"
   -->
 
   <div class="card">
-    <!-- Using a URL-encoded filename to be safe. If your host prefers the raw name change to "/£5 OFF.png" -->
-    <img src="5POUNDSOFF.png" alt="Festive £5 off poster">
+    <img src="/5POUNDSOFF.png" alt="Festive £5 off poster">
   </div>
 </body>
 </html>
