--- a/festivefeast.html
+++ b/festivefeast.html
@@ -33,7 +33,7 @@
   -->
 
   <div class="card">
-    <img src="/5POUNDSOFF.png" alt="Festive £5 off poster">
+    <img src="5POUNDSOFF.png" alt="Festive £5 off poster">
   </div>
 </body>
 </html>
