--- a/festivefeast.html
+++ b/festivefeast.html
@@ -5,37 +5,52 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Festive Feast</title>
   <style>
-    :root{--bg:#0f2f1f}
-    html,body{height:100%;margin:0}
-    body{
+    :root { --bg:#0f2f1f }
+    html,body { height:100%; margin:0 }
+    body {
       background: radial-gradient(circle at 10% 10%, rgba(255,255,255,0.02), transparent 8%), var(--bg);
-      display:flex;align-items:center;justify-content:center;padding:24px;
+      display:flex; flex-direction:column; align-items:center; justify-content:center;
+      padding:24px;
       font-family:system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial;
+      color:#fff;
     }
-    .card{
-      width:100%;max-width:900px;aspect-ratio:2/3; /* common poster ratio */
-      background:transparent;display:flex;align-items:center;justify-content:center;
-      box-shadow:0 8px 30px rgba(0,0,0,0.45);border-radius:8px;overflow:hidden;
+    .card {
+      width:100%; max-width:900px; aspect-ratio:2/3; /* common poster ratio */
+      background:transparent; display:flex; align-items:center; justify-content:center;
+      box-shadow:0 8px 30px rgba(0,0,0,0.45); border-radius:8px; overflow:hidden;
     }
-    /* make image scale cleanly and remain sharp */
-    .card img{width:100%;height:100%;object-fit:cover;display:block;user-select:none}
-
+    .card img {
+      width:100%; height:100%; object-fit:cover; display:block; user-select:none;
+    }
     /* smaller devices: allow taller poster */
     @media (max-width:420px){
-      .card{max-width:420px;aspect-ratio:3/4}
+      .card { max-width:420px; aspect-ratio:3/4 }
+    }
+    .buttons {
+      margin-top:20px;
+    }
+    .buttons a {
+      text-decoration:none;
+      color:#fff;
+      background:#2c5f3e;
+      padding:10px 18px;
+      border-radius:6px;
+      transition:background 0.3s;
+    }
+    .buttons a:hover {
+      background:#3d7f55;
     }
   </style>
 </head>
 <body>
-  <!--
-    This file expects the poster image to be located at the root and named exactly:
-    "5POUNDSOFF.png"
-  -->
-
+  <!-- Poster container -->
   <div class="card">
     <img src="5POUNDSOFF.png" alt="Festive £5 off poster">
   </div>
-</body>
+
+  <!-- Buttons section -->
   <div class="buttons">
-  <a href="home.html">⬅ Back to Home</a>
+    <a href="home.html">⬅ Back to Home</a>
+  </div>
+</body>
 </html>
