--- a/Woolpack-images/Events-Promotions/events.html
+++ b/Woolpack-images/Events-Promotions/events.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Woolpack – Events</title>
+  <title>The Woolpack Sopley – Quiz Night</title>
   <link rel="stylesheet" href="style.css">
   <style>
     body {
@@ -37,7 +37,7 @@
       background: #2e472e;
       border-radius: 12px;
       padding: 1rem;
-      max-width: 400px;
+      max-width: 450px;
       width: 100%;
       text-align: center;
       transition: transform 0.2s ease;
@@ -91,29 +91,30 @@
 </head>
 <body>
   <header>
-    <h1>Upcoming Events</h1>
+    <h1>Upcoming at The Woolpack Sopley</h1>
   </header>
 
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="Italian Week 2025.png" alt="🍝 Italian Week at The Bold Forester – 9th to 15th September">
-        <h3>Italian Week</h3>
+        <img src="Woolpack Quiz Tuesday.png" alt="Quiz Night poster at The Woolpack Sopley">
+        <h3>Quiz Night</h3>
         <p>
-          Celebrate the passion of Italy with a week full of authentic, flavour-packed Italian classics.
-        </p>
-      </div>
-      <div class="card">
-        <img src="National Curry Week 2.png" alt="🌶️ National Curry Week at The Bold Forester – 6th to 12th October">
-        <h3>National Curry Week</h3>
-        <p>
-          Spice up your week with a feast of bold, aromatic curries, from traditional favourites to exciting new twists.
+          Join us every <strong>1st and 3rd Tuesday</strong> of the month at <strong>8PM</strong>.<br>
+          £2 per person • Teams up to 6 • Cash prizes!<br><br>
+          Book your table now at<br>
+          <a href="http://www.thewoolpacksopley.co.uk" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+            www.thewoolpacksopley.co.uk
+          </a><br>
+          or call <strong>01425 672252</strong>.
         </p>
       </div>
     </div>
   </main>
 
-<div class="buttons">
-  <a href="../../boldforester.html">⬅ Back to Pub Page</a>
-  <a href="../../home.html">⬅ Back to Home</a>
-</div>
+  <div class="buttons">
+    <a href="../../woolpack.html">⬅ Back to Pub Page</a>
+    <a href="../../home.html">⬅ Back to Home</a>
+  </div>
+</body>
+</html>
