--- a/woolpack.html
+++ b/woolpack.html
@@ -146,8 +146,8 @@
 
   <h2>Extras</h2>
   <div class="buttons">
-    <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form">Book a Table</a>
-    <a href="https://www.theboldforesternewforest.co.uk/">Official Website</a>
+    <a href="https://www.thewoolpacksopley.co.uk/food/#_restaurant_form">Book a Table</a>
+    <a href="https://www.thewoolpacksopley.co.uk/">Official Website</a>
     <a href="home.html">⬅ Back to Home</a>
   </div>
 
