--- a/bold-forester-images/Events-Promotions/events.html
+++ b/bold-forester-images/Events-Promotions/events.html
@@ -101,6 +101,11 @@
         <h3>Italian Week</h3>
         <p>
           Celebrate the passion of Italy with a week full of authentic, flavour-packed Italian classics.
+           Book your table now at<br>
+          <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+            www.theboldforesternewforest.co.uk
+          </a><br>
+          or call <strong>02380 175588</strong>.
         </p>
       </div>
       <div class="card">
@@ -108,6 +113,11 @@
         <h3>National Curry Week</h3>
         <p>
           Spice up your week with a feast of bold, aromatic curries, from traditional favourites to exciting new twists.
+           Book your table now at<br>
+          <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+            www.theboldforesternewforest.co.uk
+          </a><br>
+          or call <strong>02380 175588</strong>.
         </p>
       </div>
     </div>
