--- a/bold-forester-images/Events-Promotions/events.html
+++ b/bold-forester-images/Events-Promotions/events.html
@@ -101,7 +101,7 @@
         <h3>Italian Week</h3>
         <p>
           Celebrate the passion of Italy with a week full of authentic, flavour-packed Italian classics.
-           Book your table now at<br>
+           Book your table now at<br><br>
           <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
             www.theboldforesternewforest.co.uk
           </a><br>
@@ -113,7 +113,7 @@
         <h3>National Curry Week</h3>
         <p>
           Spice up your week with a feast of bold, aromatic curries, from traditional favourites to exciting new twists.
-           Book your table now at<br>
+           Book your table now at<br><br>
           <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
             www.theboldforesternewforest.co.uk
           </a><br>
