--- a/Woolpack-images/Events-Promotions/promotions.html
+++ b/Woolpack-images/Events-Promotions/promotions.html
@@ -97,14 +97,26 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="promotions/promo1.jpg" alt="Burger Mondays">
+        <img src="Burger Mondays.jpg" alt="Burger Mondays">
         <h3>Burger Mondays</h3>
-        <p>Buy any burger and get a free pint every Monday.</p>
+        <p>Buy any burger from our menu or specials board and get a free pint every Monday.<br><br>
+          Book your table now at<br><br>
+          <a href="http://www.thewoolpacksopley.co.uk" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+            www.thewoolpacksopley.co.uk
+          </a><br>
+          or call <strong>01425 672252</strong>.
+        </p>
       </div>
       <div class="card">
-        <img src="promotions/promo2.jpg" alt="Wine Wednesday">
-        <h3>Wine Wednesday</h3>
-        <p>20% off all bottles of wine, every Wednesday.</p>
+        <img src="Pie & Pint Wednesday.jpg" alt="Pie & Pint Wednesday">
+        <h3>Pie & Pint Wednesday</h3>
+        <p>Buy any pie from our menu or specials board and get a free pint every Wednesday.<br><br>
+          Book your table now at<br><br>
+          <a href="http://www.thewoolpacksopley.co.uk" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+            www.thewoolpacksopley.co.uk
+          </a><br>
+          or call <strong>01425 672252</strong>.
+        </p>
       </div>
     </div>
   </main>
