--- a/Woolpack-images/Events-Promotions/promotions.html
+++ b/Woolpack-images/Events-Promotions/promotions.html
@@ -100,7 +100,7 @@
         <img src="Burger Mondays.jpg" alt="Burger Mondays">
         <h3>Burger Mondays</h3>
         <p>Buy any burger from our menu or specials board and get a free pint every Monday.<br><br>
-          Book your table now at<br><br>
+          Book your table now at<br>
           <a href="http://www.thewoolpacksopley.co.uk" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
             www.thewoolpacksopley.co.uk
           </a><br>
@@ -111,7 +111,7 @@
         <img src="Pie & Pint Wednesday.jpg" alt="Pie & Pint Wednesday">
         <h3>Pie & Pint Wednesday</h3>
         <p>Buy any pie from our menu or specials board and get a free pint every Wednesday.<br><br>
-          Book your table now at<br><br>
+          Book your table now at<br>
           <a href="http://www.thewoolpacksopley.co.uk" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
             www.thewoolpacksopley.co.uk
           </a><br>
