--- a/Lamb-Inn-images/Events-Promotions/events.html
+++ b/Lamb-Inn-images/Events-Promotions/events.html
@@ -100,7 +100,12 @@
         <img src="Quiz Sept The Lamb.jpg"
         <h3>🧠 Quiz Night at The Lamb Inn</h3>
         <p>
-          Test your knowledge and join the fun! Gather your team of up to six, enjoy great food & drinks, and compete for bragging rights in a lively and relaxed pub atmosphere.
+          Test your knowledge and join the fun! Gather your team of up to six, enjoy great food & drinks, and compete for bragging rights in a lively and relaxed pub atmosphere.<br><br>
+          Book your table now at<br>
+          <a href="https://www.thelambnomansland.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+           https://www.thelambnomansland.co.uk/
+          </a><br>
+          or call <strong>01794 331331</strong>.
         </p>
       </div>
     </div>
