--- a/Royal-Oak-images/Events-Promotions/events.html
+++ b/Royal-Oak-images/Events-Promotions/events.html
@@ -100,16 +100,15 @@
         <img src="Italian Week 2025.png" alt="🍝 Italian Week at The Royal Oak – 15th to 21st September">
         <h3>Italian Week</h3>
         <p>
-          Celebrate the passion of Italy with a week full of authentic, flavour-packed Italian classics.
+          Celebrate the passion of Italy with a week full of authentic, flavour-packed Italian classics.<br><br>
+          Book your table now at<br>
+          <a href="https://www.theroyaloakbeaulieu.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+           https://www.theroyaloakbeaulieu.co.uk/
+          </a><br>
+          or call <strong>01590 612228</strong>.
         </p>
       </div>
-      <div class="card">
-        <img src="National Curry Week 2.png" alt="🌶️ National Curry Week at The Bold Forester – 6th to 12th October">
-        <h3>National Curry Week</h3>
-        <p>
-          Spice up your week with a feast of bold, aromatic curries, from traditional favourites to exciting new twists.
-        </p>
-      </div>
+    
     </div>
   </main>
 
