--- a/Royal-Oak-images/Events-Promotions/events.html
+++ b/Royal-Oak-images/Events-Promotions/events.html
@@ -97,7 +97,7 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="Italian Week 2025.png" alt="🍝 Italian Week at The Royal Oak – 15th to 21st September">
+        <img src="Italian-Week.png" alt="🍝 Italian Week at The Royal Oak – 15th to 21st September">
         <h3>Italian Week</h3>
         <p>
           Celebrate the passion of Italy with a week full of authentic, flavour-packed Italian classics.<br><br>
