--- a/Fighting-Cocks-images/Events-Promotions/promotions.html
+++ b/Fighting-Cocks-images/Events-Promotions/promotions.html
@@ -99,7 +99,7 @@
       <div class="card">
         <img src="FC Direct10.jpg" alt="Book Direct">
         <h3>Book Direct</h3>
-        <p>Book Direct quoting DIRECT10 to get 10% when reserving a room with us.</p>
+        <p>Book Direct quoting DIRECT10 to get 10% OFF when reserving a room with us.</p>
       </div>
       <div class="card">
         <img src="choc-orange-scaled.jpg" alt="Coffee and Cake for £5">
