--- a/New-Forest-Inn-images/Events-Promotions/promotions.html
+++ b/New-Forest-Inn-images/Events-Promotions/promotions.html
@@ -97,19 +97,21 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="promotions/promo1.jpg" alt="Burger Mondays">
-        <h3>Burger Mondays</h3>
-        <p>Buy any burger and get a free pint every Monday.</p>
+        <img src="NFI DIRECT10.jpg" alt="Book Direct">
+        <h3>Book Direct</h3>
+        <p>Book Direct quoting DIRECT10 to get 10% OFF when reserving a room with us.<br><br>
+          Book your room(s) now at<br>
+          <a href="https://web-bookings.hotels.uk.com/#/booking/46267/items/availability?k=Pz3vpXoBrwIroy0WsnQ3AMu2JNDYyNjc%3D&r=1757510946698" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+            https://www.thenewforestinn.co.uk/
+          </a><br>
+          or call <strong>02380 284690</strong>.
+        </p>
       </div>
-      <div class="card">
-        <img src="promotions/promo2.jpg" alt="Wine Wednesday">
-        <h3>Wine Wednesday</h3>
-        <p>20% off all bottles of wine, every Wednesday.</p>
-      </div>
+      
     </div>
   </main>
 
 <div class="buttons">
-  <a href="../../boldforester.html">⬅ Back to Pub Page</a>
+  <a href="../../newforestinn.html">⬅ Back to Pub Page</a>
   <a href="../../home.html">⬅ Back to Home</a>
 </div>
