--- a/Fighting-Cocks-images/Events-Promotions/promotions.html
+++ b/Fighting-Cocks-images/Events-Promotions/promotions.html
@@ -99,7 +99,13 @@
       <div class="card">
         <img src="FC Direct10.jpg" alt="Book Direct">
         <h3>Book Direct</h3>
-        <p>Book Direct quoting DIRECT10 to get 10% OFF when reserving a room with us.</p>
+         <p>Book Direct quoting DIRECT10 to get 10% OFF when reserving a room with us.<br><br>
+          Book your room(s) now at<br>
+          <a href="https://web-bookings.hotels.uk.com/#/booking/51730/items/availability?k=XbkHpDevv1inahpI6xTpMVzFxNTE3MzA%3D&r=1757511259827&a=2&c=" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+           https://thefightingcockspub.co.uk/
+          </a><br>
+          or call <strong>01425 655686</strong>.
+        </p>
       </div>
       <div class="card">
         <img src="choc-orange-scaled.jpg" alt="Coffee and Cake for £5">
