--- a/newforestinn.html
+++ b/newforestinn.html
@@ -143,8 +143,8 @@
   <!-- Links to Events & Promotions -->
   <h2>What’s On</h2>
   <div class="buttons">
-    <a href="Fighting-Cocks-images/Events-Promotions/events.html">View Events</a>
-    <a href="Fighting-Cocks-images/Events-Promotions/promotions.html">View Promotions</a>
+    <a href="New-Forest-Inn-images/Events-Promotions/events.html">View Events</a>
+    <a href="New-Forest-Inn-images/Events-Promotions/promotions.html">View Promotions</a>
   </div>
 
   <!-- Social Media Section -->
@@ -158,9 +158,9 @@
 
   <h2>Extras</h2>
   <div class="buttons">
-    <a href="https://thefightingcockspub.co.uk/food/#restaurant_form">Book a Table</a>
-    <a href="https://web-bookings.hotels.uk.com/#/booking/51730/items/availability?k=XbkHpDevv1inahpI6xTpMVzFxNTE3MzA%3D&r=1757344029010">Book a Room</a>
-    <a href="https://thefightingcockspub.co.uk/">Official Website</a>
+    <a href="https://www.thenewforestinn.co.uk/food/#_restaurant_form">Book a Table</a>
+    <a href="https://web-bookings.hotels.uk.com/#/booking/46267/items/availability?k=Pz3vpXoBrwIroy0WsnQ3AMu2JNDYyNjc%3D&r=1757511610247">Book a Room</a>
+    <a href="https://www.thenewforestinn.co.uk/">Official Website</a>
     <a href="home.html">⬅ Back to Home</a>
   </div>
 
