--- a/Trusty-Servant-images/Events-Promotions/promotions.html
+++ b/Trusty-Servant-images/Events-Promotions/promotions.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Bold Forester – Promotions</title>
+  <title>The Trusty Servant – Promotions</title>
   <link rel="stylesheet" href="style.css">
   <style>
     body {
@@ -97,19 +97,20 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="promotions/promo1.jpg" alt="Burger Mondays">
-        <h3>Burger Mondays</h3>
-        <p>Buy any burger and get a free pint every Monday.</p>
+        <img src="TRUSTY DIRECT10.jpg" alt="Book Direct">
+        <h3>Book Direct</h3>
+        <p>Book Direct quoting DIRECT10 to get 10% OFF when reserving a room with us.<br><br>
+          Book your room(s) now at<br>
+          <a href="https://web-bookings.hotels.uk.com/#/booking/46270/items/availability?k=8NvS5v6pFtbqgO4xncljzOBc2NDYyNzA%3D&r=1757513224749" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+            https://www.thetrustyservant.co.uk/
+          </a><br>
+          or call <strong>02380 812137</strong>.
+        </p>
       </div>
-      <div class="card">
-        <img src="promotions/promo2.jpg" alt="Wine Wednesday">
-        <h3>Wine Wednesday</h3>
-        <p>20% off all bottles of wine, every Wednesday.</p>
-      </div>
-    </div>
+      
   </main>
 
 <div class="buttons">
-  <a href="../../boldforester.html">⬅ Back to Pub Page</a>
+  <a href="../../trustyservant.html">⬅ Back to Pub Page</a>
   <a href="../../home.html">⬅ Back to Home</a>
 </div>
