--- a/Trusty-Servant-images/Events-Promotions/promotions.html
+++ b/Trusty-Servant-images/Events-Promotions/promotions.html
@@ -97,7 +97,7 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="TRUSTY DIRECT10.jpg" alt="Book Direct">
+        <img src="TRUSTY DIRECT.jpg" alt="Book Direct">
         <h3>Book Direct</h3>
         <p>Book Direct quoting DIRECT10 to get 10% OFF when reserving a room with us.<br><br>
           Book your room(s) now at<br>
