--- a/royaloak.html
+++ b/royaloak.html
@@ -123,6 +123,7 @@
     <a href="Royal-Oak-images/Royal-Oak-Menus/main-menu/Summer Menu.html">Menu</a>
     <a href="Royal-Oak-images/Royal-Oak-Menus/sunday-menu/Sunday Menu.html">Sunday Menu</a>
     <a href="Royal-Oak-images/Royal-Oak-Menus/desserts-menu/Dessert Menu ROB.html">Desserts Menu</a>
+    <a href="Royal-Oak-images/Christmas/Oak-Christmas.html">Christmas Menus 2025</a>
   </div>
 
   <h2>Drink Menus</h2>
