--- a/Woolpack-images/Christmas/Woolpack-Christmas.html
+++ b/Woolpack-images/Christmas/Woolpack-Christmas.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Bold Forester Christmas Menus</title>
+  <title>The Woolpack Christmas Menus</title>
   <link rel="stylesheet" href="style.css">
   <style>
     body {
@@ -97,21 +97,21 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="Bold-Christmas-Party-2025.jpg">
+        <img src="Woolpack-Christmas-Party-menu-2025.jpg">
         <h3>Christmas Party Menu 2025</h3>
         <p>
           Celebrate this festive season with us
         </p>
       </div>
       <div class="card">
-        <img src="Bold-Christmas-Day-2025.jpg">
+        <img src="Woolpack-Christmas-Day-menu-2025.jpg">
         <h3>Christmas Day Menu 2025</h3>
         <p>
           Let us do all the cooking
         </p>
       </div>
       <div class="card">
-        <img src="Bold-Christmas-Festive-Feast-2025.jpg">
+        <img src="Woolpack-Christmas-Festive-Feast-menu-2025.jpg">
         <h3>Christmas Festive Feast Menu 2025</h3>
         <p>
           Come and have a Christmas Feast this season
@@ -121,6 +121,6 @@
   </main>
 
 <div class="buttons">
-  <a href="../../boldforester.html">⬅ Back to Pub Page</a>
+  <a href="../../woolpack.html">⬅ Back to Pub Page</a>
   <a href="../../home.html">⬅ Back to Home</a>
 </div>
