--- a/bold-forester-images/Christmas/Bold-Christmas.html
+++ b/bold-forester-images/Christmas/Bold-Christmas.html
@@ -100,7 +100,11 @@
         <img src="Bold-Christmas-Party-2025.jpg">
         <h3>Christmas Party Menu 2025</h3>
         <p>
-          Celebrate this festive season with us
+          Celebrate this festive season with us.
+          <p class="booking-note">
+  📞 Book your Christmas Party now at <strong>[PUB PHONE NUMBER]</strong>.<br>
+  A <strong>£10 deposit per head</strong> (redeemable against your bill) is required to confirm your reservation, and we ask for a pre-order with your food choices.
+</p>
         </p>
       </div>
       <div class="card">
