--- a/bold-forester-images/Christmas/Bold-Christmas.html
+++ b/bold-forester-images/Christmas/Bold-Christmas.html
@@ -102,7 +102,7 @@
         <p>
           Celebrate this festive season with us.
           <p class="booking-note">
-  📞 Book your Christmas Party now at <strong>[PUB PHONE NUMBER]</strong>.<br>
+  📞 Book your Christmas Party now at <strong>02380 175588</strong>.<br>
   A <strong>£10 deposit per head</strong> (redeemable against your bill) is required to confirm your reservation, and we ask for a pre-order with your food choices.
 </p>
         </p>
