--- a/bold-forester-images/Christmas/Bold-Christmas.html
+++ b/bold-forester-images/Christmas/Bold-Christmas.html
@@ -103,8 +103,9 @@
           Celebrate this festive season with us.
           <p class="booking-note">
   <p class="booking-note">
+  <p class="booking-note">
   📞 Book your Christmas Party now at 
-  <a href="tel:02380 175588"><strong>02380 175588</strong></a>.<br>
+  <a href="tel:02380 175588" class="phone-link"><strong>02380 175588</strong></a>.<br>
   A <strong>£10 deposit per head</strong> (redeemable against your bill) is required to confirm your reservation, and we ask for a pre-order with your food choices.
 </p>
         </p>
