--- a/bold-forester-images/Christmas/Bold-Christmas.html
+++ b/bold-forester-images/Christmas/Bold-Christmas.html
@@ -65,6 +65,22 @@
       color: #f4f4f4;
     }
 
+    .booking-note {
+      margin-top: 1rem;
+      font-size: 0.9rem;
+      color: #f4f4f4;
+    }
+
+    .booking-note a.phone-link {
+      color: #fff; /* force white */
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .booking-note a.phone-link:hover {
+      text-decoration: underline;
+    }
+
     .buttons {
       display: flex;
       flex-direction: column;
@@ -96,38 +112,49 @@
 
   <main>
     <div class="card-grid">
+
+      <!-- Christmas Party Menu -->
       <div class="card">
-        <img src="Bold-Christmas-Party-2025.jpg">
+        <img src="Bold-Christmas-Party-2025.jpg" alt="Christmas Party Menu 2025">
         <h3>Christmas Party Menu 2025</h3>
-        <p>
-          Celebrate this festive season with us.
-          <p class="booking-note">
-  <p class="booking-note">
-  <p class="booking-note">
-  📞 Book your Christmas Party now at 
-  <a href="tel:02380 175588" class="phone-link"><strong>02380 175588</strong></a>.<br>
-  A <strong>£10 deposit per head</strong> (redeemable against your bill) is required to confirm your reservation, and we ask for a pre-order with your food choices.
-</p>
+        <p>Celebrate this festive season with us.</p>
+        <p class="booking-note">
+          📞 Book your Christmas Party now at 
+          <a href="tel:02380175588" class="phone-link"><strong>02380 175588</strong></a>.<br>
+          A <strong>£10 deposit per head</strong> (redeemable against your bill) is required to confirm your reservation, and we ask for a pre-order with your food choices.
         </p>
       </div>
+
+      <!-- Christmas Day Menu -->
       <div class="card">
-        <img src="Bold-Christmas-Day-2025.jpg">
+        <img src="Bold-Christmas-Day-2025.jpg" alt="Christmas Day Menu 2025">
         <h3>Christmas Day Menu 2025</h3>
-        <p>
-          Let us do all the cooking
+        <p>Let us do all the cooking.</p>
+        <p class="booking-note">
+          📞 Book your Christmas Day celebration now at 
+          <a href="tel:02380175588" class="phone-link"><strong>02380 175588</strong></a>.<br>
+          A <strong>£20 deposit per head</strong> (redeemable against your bill) is required to confirm your reservation, and we ask for a pre-order with your food choices.
         </p>
       </div>
+
+      <!-- Christmas Festive Feast Menu -->
       <div class="card">
-        <img src="Bold-Christmas-Festive-Feast-2025.jpg">
+        <img src="Bold-Christmas-Festive-Feast-2025.jpg" alt="Christmas Festive Feast Menu 2025">
         <h3>Christmas Festive Feast Menu 2025</h3>
-        <p>
-          Come and have a Christmas Feast this season
+        <p>Come and have a Christmas Feast this season.</p>
+        <p class="booking-note">
+          📞 Book your Festive Feast now at 
+          <a href="tel:02380175588" class="phone-link"><strong>02380 175588</strong></a>.<br>
+          A <strong>£10 deposit per head</strong> (redeemable against your bill) is required to confirm your reservation, and we ask for a pre-order with your food choices.
         </p>
       </div>
+
     </div>
   </main>
 
-<div class="buttons">
-  <a href="../../boldforester.html">⬅ Back to Pub Page</a>
-  <a href="../../home.html">⬅ Back to Home</a>
-</div>
+  <div class="buttons">
+    <a href="../../boldforester.html">⬅ Back to Pub Page</a>
+    <a href="../../home.html">⬅ Back to Home</a>
+  </div>
+</body>
+</html>
