--- a/bold-forester-images/Christmas/Bold-Christmas.html
+++ b/bold-forester-images/Christmas/Bold-Christmas.html
@@ -145,8 +145,7 @@
         <p class="booking-note">
           📞 Book your Festive Feast now at 
           <a href="tel:02380175588" class="phone-link"><strong>02380 175588</strong></a>.<br>
-          A <strong>£10 deposit per head</strong> (redeemable against your bill) is required to confirm your reservation, and we ask for a pre-order with your food choices.
-        </p>
+          A <strong>£10 deposit per head</strong> (redeemable against your bill) is required to confirm your reservation.</p>
       </div>
 
     </div>
