--- a/Fighting-Cocks-images/Christmas/Fighting-Cocks-Christmas.html
+++ b/Fighting-Cocks-images/Christmas/Fighting-Cocks-Christmas.html
@@ -100,22 +100,31 @@
         <img src="Fighting-Cocks-Xmas-party-menu-2025.jpg">
         <h3>Christmas Party Menu 2025</h3>
         <p>
-          Celebrate this festive season with us
+          Celebrate this festive season with us</p>
+        <p class="booking-note">
+          📞 Book your Christmas Party now at 
+          <a href="tel:02380175588" class="phone-link"><strong>02380 175588</strong></a>.<br>
+          A <strong>£10 deposit per head</strong> (redeemable against your bill) is required to confirm your reservation, and we ask for a pre-order with your food choices.
         </p>
       </div>
       <div class="card">
         <img src="Fighting-Cocks-Xmas-Day-menu-2025.jpg">
         <h3>Christmas Day Menu 2025</h3>
-        <p>
-          Let us do all the cooking
+        <p>Let us do all the cooking</p>
+         <p class="booking-note">
+          📞 Book your Christmas Day celebration now at 
+          <a href="tel:02380175588" class="phone-link"><strong>02380 175588</strong></a>.<br>
+          A <strong>£20 deposit per head</strong> (redeemable against your bill) is required to confirm your reservation, and we ask for a pre-order with your food choices.
         </p>
       </div>
       <div class="card">
         <img src="Fighting-Cocks-Xmas-Festive-Feast-menu-2025.jpg">
         <h3>Christmas Festive Feast Menu 2025</h3>
-        <p>
-          Come and have a Christmas Feast this season
-        </p>
+        <p>Come and have a Christmas Feast this season</p>
+         <p class="booking-note">
+          📞 Book your Festive Feast now at 
+          <a href="tel:02380175588" class="phone-link"><strong>02380 175588</strong></a>.<br>
+          A <strong>£10 deposit per head</strong> (redeemable against your bill) is required to confirm your reservation.</p>
       </div>
     </div>
   </main>
