--- a/Royal-Oak-images/Christmas/Oak-Christmas.html
+++ b/Royal-Oak-images/Christmas/Oak-Christmas.html
@@ -65,6 +65,22 @@
       color: #f4f4f4;
     }
 
+    
+    .booking-note {
+      margin-top: 1rem;
+      font-size: 0.9rem;
+      color: #f4f4f4;
+    }
+
+    .booking-note a.phone-link {
+      color: #fff; /* force white */
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .booking-note a.phone-link:hover {
+      text-decoration: underline;
+    }
     .buttons {
       display: flex;
       flex-direction: column;
