--- a/newforestinn.html
+++ b/newforestinn.html
@@ -104,6 +104,21 @@
       background: #ececec;
     }
 
+    /* Opening Times Box */
+    .opening-times {
+      margin: 2rem auto;
+      max-width: 400px;
+      background: rgba(46, 71, 46, 0.9);
+      padding: 1rem;
+      border-radius: 12px;
+      color: #f4f4f4;
+    }
+
+    .opening-times h3 {
+      margin-top: 0;
+      color: #e6d8b5;
+    }
+
     footer {
       margin-top: 2rem;
       padding: 1rem;
@@ -158,10 +173,23 @@
 
   <h2>Extras</h2>
   <div class="buttons">
+    <a href="tel:02380282377">📞 Call Us</a>
     <a href="https://www.thenewforestinn.co.uk/food/#_restaurant_form">Book a Table</a>
     <a href="https://web-bookings.hotels.uk.com/#/booking/46267/items/availability?k=Pz3vpXoBrwIroy0WsnQ3AMu2JNDYyNjc%3D&r=1757511610247">Book a Room</a>
     <a href="https://www.thenewforestinn.co.uk/">Official Website</a>
     <a href="home.html">⬅ Back to Home</a>
+  </div>
+
+  <div class="opening-times">
+    <h3>Opening Times</h3>
+    <p><strong>Pub</strong><br>
+      Monday – Saturday: 11:00 – 23:00<br>
+      Sunday: 11:00 – 22:30
+    </p>
+    <p><strong>Food</strong><br>
+      Monday – Saturday: 11:30 – 21:30<br>
+      Sunday: 11:30 – 21:00
+    </p>
   </div>
 
   <footer>
@@ -169,4 +197,3 @@
   </footer>
 </body>
 </html>
-  
