--- a/newforestinn.html
+++ b/newforestinn.html
@@ -181,16 +181,20 @@
   </div>
 
   <div class="opening-times">
-    <h3>Opening Times</h3>
-    <p><strong>Pub</strong><br>
-      Monday – Saturday: 08:30 – 23:00<br>
-      Sunday: 12:00 – 22:30
-    </p>
-    <p><strong>Food</strong><br>
-      Monday – Saturday: 12:00 – 21:30<br>
-      Sunday: 12:00 – 21:00
-    </p>
-  </div>
+  <h3>Opening Times</h3>
+  <p><strong>Pub</strong><br>
+    Monday – Saturday: 08:30 – 23:00<br>
+    Sunday: 12:00 – 22:30
+  </p>
+  <p><strong>Food</strong><br>
+    Monday – Saturday: 12:00 – 21:30<br>
+    Sunday: 12:00 – 21:00
+  </p>
+
+  <p>
+    📧 <a href="mailto:info@thenewforestinn.co.uk" class="email-link"><strong>Email us</strong></a>
+  </p>
+</div>
 
   <footer>
     © 2025 Country Inns – The New Forest Inn
