--- a/trustyservant.html
+++ b/trustyservant.html
@@ -157,12 +157,29 @@
   </div>
 
   <h2>Extras</h2>
-  <div class="buttons">
-    <a href="https://www.thetrustyservant.co.uk/food/#restaurant_form">Book a Table</a>
-    <a href="https://web-bookings.hotels.uk.com/#/booking/46270/items/availability?k=8NvS5v6pFtbqgO4xncljzOBc2NDYyNzA%3D&r=1757433900969">Book a Room</a>
-    <a href="https://www.thetrustyservant.co.uk/">Official Website</a>
-    <a href="home.html">⬅ Back to Home</a>
-  </div>
+<div class="buttons">
+  <a href="tel:02380812137">📞 Call Us</a>
+  <a href="https://www.thetrustyservant.co.uk/food/#restaurant_form">Book a Table</a>
+  <a href="https://web-bookings.hotels.uk.com/#/booking/46270/items/availability?k=8NvS5v6pFtbqgO4xncljzOBc2NDYyNzA%3D&r=1757526495346&a=2&c=">Book a Room</a>
+  <a href="https://www.thetrustyservant.co.uk/">Official Website</a>
+  <a href="home.html">⬅ Back to Home</a>
+</div>
+
+<div class="opening-times">
+  <h3>Opening Times</h3>
+  <p><strong>Pub</strong><br>
+    Monday – Saturday: 08:30 – 23:00<br>
+    Sunday: 08:30 – 22:00
+  </p>
+  <p><strong>Food</strong><br>
+    Monday – Saturday: 11:30 – 21:30<br>
+    Sunday: 12:00 – 21:00
+  </p>
+
+  <p>
+    📧 <a href="mailto:info@thetrustyservant.co.uk" class="email-link"><strong>Email us</strong></a>
+  </p>
+</div>
 
   <footer>
     © 2025 Country Inns – The Trusty Servant Inn
