--- a/fightingcocks.html
+++ b/fightingcocks.html
@@ -157,12 +157,29 @@
   </div>
 
   <h2>Extras</h2>
-  <div class="buttons">
-    <a href="https://thefightingcockspub.co.uk/food/#restaurant_form">Book a Table</a>
-    <a href="https://web-bookings.hotels.uk.com/#/booking/51730/items/availability?k=XbkHpDevv1inahpI6xTpMVzFxNTE3MzA%3D&r=1757344029010">Book a Room</a>
-    <a href="https://thefightingcockspub.co.uk/">Official Website</a>
-    <a href="home.html">⬅ Back to Home</a>
-  </div>
+<div class="buttons">
+  <a href="tel:01425655686">📞 Call Us</a>
+  <a href="https://thefightingcockspub.co.uk/food/#restaurant_form">Book a Table</a>
+  <a href="https://web-bookings.hotels.uk.com/#/booking/51730/items/availability?k=XbkHpDevv1inahpI6xTpMVzFxNTE3MzA%3D&r=1757526852990&a=2&c=">Book a Room</a>
+  <a href="https://thefightingcockspub.co.uk/">Official Website</a>
+  <a href="home.html">⬅ Back to Home</a>
+</div>
+
+<div class="opening-times">
+  <h3>Opening Times</h3>
+  <p><strong>Pub</strong><br>
+    Monday – Saturday: 08:30 – 23:00<br>
+    Sunday: 12:00 – 22:00
+  </p>
+  <p><strong>Food</strong><br>
+    Monday – Saturday: 12:00 – 21:30<br>
+    Sunday: 12:00 – 21:00
+  </p>
+
+  <p>
+    📧 <a href="mailto:info@thefightingcockspub.co.uk" class="email-link"><strong>Email us</strong></a>
+  </p>
+</div>
 
   <footer>
     © 2025 Country Inns – The Fighting Cocks
