--- a/boldforester.html
+++ b/boldforester.html
@@ -150,11 +150,28 @@
   </div>
 
   <h2>Extras</h2>
-  <div class="buttons">
-    <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form">Book a Table</a>
-    <a href="https://www.theboldforesternewforest.co.uk/">Official Website</a>
-    <a href="home.html">⬅ Back to Home</a>
-  </div>
+<div class="buttons">
+  <a href="tel:02380175588">📞 Call Us</a>
+  <a href="https://www.theboldforesternewforest.co.uk/food/#_restaurant_form">Book a Table</a>
+  <a href="https://www.theboldforesternewforest.co.uk/">Official Website</a>
+  <a href="home.html">⬅ Back to Home</a>
+</div>
+
+  <div class="opening-times">
+  <h3>Opening Times</h3>
+  <p><strong>Pub</strong><br>
+    Monday – Saturday: 11:00 – 23:00<br>
+    Sunday: 11:00 – 22:30
+  </p>
+  <p><strong>Food</strong><br>
+    Monday – Saturday: 11:30 – 21:30<br>
+    Sunday: 11:30 – 21:00
+  </p>
+
+  <p>
+    📧 <a href="mailto:info@theboldforesternewforest.co.uk" class="email-link"><strong>Email us</strong></a>
+  </p>
+</div>
 
   <footer>
     © 2025 Country Inns – The Bold Forester
