--- a/woolpack.html
+++ b/woolpack.html
@@ -144,11 +144,29 @@
     <a href="https://www.tiktok.com/@theboldforester_" class="social-card">TikTok</a>
   </div>
 
-  <h2>Extras</h2>
-  <div class="buttons">
-    <a href="https://www.thewoolpacksopley.co.uk/food/#_restaurant_form">Book a Table</a>
-    <a href="https://www.thewoolpacksopley.co.uk/">Official Website</a>
-    <a href="home.html">⬅ Back to Home</a>
+<h2>Extras</h2>
+<div class="buttons">
+  <a href="tel:014256722521">📞 Call Us</a>
+  <a href="https://www.thewoolpacksopley.co.uk/food/#restaurant_form">Book a Table</a>
+  <a href="https://www.thewoolpacksopley.co.uk/">Official Website</a>
+  <a href="home.html">⬅ Back to Home</a>
+</div>
+
+<div class="opening-times">
+  <h3>Opening Times</h3>
+  <p><strong>Pub</strong><br>
+    Monday – Saturday: 11:00 – 23:00<br>
+    Sunday: 11:00 – 22:30
+  </p>
+  <p><strong>Food</strong><br>
+    Monday – Saturday: 11:30 – 21:30<br>
+    Sunday: 12:00 – 21:00
+  </p>
+  
+  <p>
+    📧 <a href="mailto:info@thewoolpacksopley.co.uk" class="email-link"><strong>Email us</strong></a>
+   </p>
+  
   </div>
 
   <footer>
