--- a/royaloak.html
+++ b/royaloak.html
@@ -147,11 +147,29 @@
     <a href="https://twitter.com/Royal_Oak1" class="social-card">X</a>
   </div>
 
-  <h2>Extras</h2>
-  <div class="buttons">
-    <a href="https://www.theroyaloakbeaulieu.co.uk/food/#restaurant_form">Book a Table</a>
-    <a href="https://www.theroyaloakbeaulieu.co.uk/">Official Website</a>
-    <a href="home.html">⬅ Back to Home</a>
+ <h2>Extras</h2>
+<div class="buttons">
+  <a href="tel:01590 612228">📞 Call Us</a>
+  <a href="https://www.theroyaloakbeaulieu.co.uk/food/#restaurant_form">Book a Table</a>
+  <a href="https://www.theroyaloakbeaulieu.co.uk/">Official Website</a>
+  <a href="home.html">⬅ Back to Home</a>
+</div>
+
+<div class="opening-times">
+  <h3>Opening Times</h3>
+  <p><strong>Pub</strong><br>
+    Monday – Saturday: 11:00 – 22:30<br>
+    Sunday: 11:30 – 22:00
+  </p>
+  <p><strong>Food</strong><br>
+    Monday – Saturday: 11:30 – 21:30<br>
+    Sunday: 11:30 – 21:00
+  </p>
+  
+  <p>
+    📧 <a href="mailto:info@theroyaloakbeaulieu.com" class="email-link"><strong>Email us</strong></a>
+   </p>
+  
   </div>
 
   <footer>
