--- a/royaloak.html
+++ b/royaloak.html
@@ -68,6 +68,16 @@
       background: #4f7c4f;
     }
 
+    .opening-times a.email-link {
+      color: #fff;               /* force white */
+      text-decoration: underline; /* keep underline for visibility */
+      font-weight: bold;          /* make it bold */
+    }
+
+    .opening-times a.email-link:hover {
+      color: #e6d8b5; /* subtle gold hover to match your theme */
+    }
+    
     /* Social scroll */
     .social-scroll {
       display: flex;
