--- a/woolpack.html
+++ b/woolpack.html
@@ -109,6 +109,21 @@
       background: #ececec;
     }
 
+ /* Opening Times Box */
+    .opening-times {
+      margin: 2rem auto;
+      max-width: 400px;
+      background: rgba(46, 71, 46, 0.9);
+      padding: 1rem;
+      border-radius: 12px;
+      color: #f4f4f4;
+    }
+
+    .opening-times h3 {
+      margin-top: 0;
+      color: #e6d8b5;
+    }
+    
     footer {
       margin-top: 2rem;
       padding: 1rem;
