--- a/boldforester.html
+++ b/boldforester.html
@@ -18,6 +18,7 @@
       background-color: rgba(34, 49, 34, 0.9);
       padding: 1.5rem;
     }
+
     header h1 {
       margin: 0;
       font-size: 2rem;
@@ -27,13 +28,6 @@
     .logo {
       margin: 1rem auto;
       max-width: 140px;
-    }
-
-    .hero {
-      position: relative;
-      width: 100%;
-      height: 220px;
-      background: url("images/lambinn.jpg") center/cover no-repeat;
     }
 
     .content {
@@ -47,13 +41,13 @@
       margin-top: 2rem;
     }
 
-    /* Buttons */
     .buttons {
       display: flex;
       flex-direction: column;
       gap: 1rem;
       margin-top: 1rem;
     }
+
     .buttons a {
       display: block;
       background: #3c5a3c;
@@ -64,56 +58,16 @@
       font-weight: bold;
       transition: background 0.3s;
     }
+
     .buttons a:hover {
       background: #4f7c4f;
     }
 
-    .opening-times a.email-link {
-     color: #fff;               /* force white */
-     text-decoration: underline; /* keep underline for visibility */
-     font-weight: bold;          /* make it bold */
-    }
-
-.opening-times a.email-link:hover {
-  color: #e6d8b5; /* subtle gold hover to match your theme */
-    }
-
-    /* Social scroll */
-    .social-scroll {
-      display: flex;
-      overflow-x: auto;
-      gap: 1rem;
-      padding: 1rem 0;
-      scroll-snap-type: x mandatory;
-      -webkit-overflow-scrolling: touch;
-    }
-    .social-scroll::-webkit-scrollbar {
-      display: none;
-    }
-    .social-card {
-      flex: 0 0 auto;
-      min-width: 150px;
-      padding: 1rem;
-      text-align: center;
-      background: #f9f9f9;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      text-decoration: none;
-      color: #333;
-      font-weight: bold;
-      scroll-snap-align: start;
-      transition: transform 0.2s ease, background 0.2s ease;
-    }
-    .social-card:hover {
-      transform: translateY(-3px);
-      background: #ececec;
-    }
-
- /* Opening Times Box */
+    /* Opening Times Box */
     .opening-times {
       margin: 2rem auto;
       max-width: 400px;
-      background: rgba(46, 71, 46, 0.9);
+      background: rgba(46, 71, 46, 0.95); /* slightly lighter so it stands out */
       padding: 1rem;
       border-radius: 12px;
       color: #f4f4f4;
@@ -123,7 +77,17 @@
       margin-top: 0;
       color: #e6d8b5;
     }
-    
+
+    .opening-times a.email-link {
+      color: #fff;
+      text-decoration: underline;
+      font-weight: bold;
+    }
+
+    .opening-times a.email-link:hover {
+      color: #e6d8b5;
+    }
+
     footer {
       margin-top: 2rem;
       padding: 1rem;
@@ -134,70 +98,55 @@
 </head>
 <body>
   <header>
-    <img src="The Bold Forester.jpg" alt="The Bold Forester Logo" class="logo">
+    <img src="The Bold Forester.png" alt="The Bold Forester Logo" class="logo">
   </header>
 
   <section>
     <div class="about">
-      <p>Welcome to The Bold Forester, Marchwood — a cosy country pub at the heart of the New Forest. Explore our menus, book a table, and see what’s on.</p>
+      <p>Welcome to The Bold Forester, Marchwood — a traditional country pub at the edge of the New Forest. Explore our menus, book a table, and see what’s on.</p>
     </div>
   </section>
 
   <h2>Food Menus</h2>
   <div class="buttons">
-    <a href="bold-forester-images/bold-forester-menus/main-menu/NEW-MENU-SPRING-SUMMER-2025.html">Menu</a>
-    <a href="bold-forester-images/bold-forester-menus/sunday-menu/NEW-SUNDAY-MENU-SPRING-SUMMER-2025.html">Sunday Menu</a>
-    <a href="bold-forester-images/bold-forester-menus/kids-menu/Tiny-Tums-Menu-2025.html">Kids Menu</a>
-    <a href="bold-forester-images/bold-forester-menus/desserts-menu/New-Dessert-Menu-2025.html">Desserts Menu</a>
-    <a href="bold-forester-images/Christmas/Bold-Christmas.html">Christmas Menus 2025</a>
+    <a href="bold-forester-images/bold-forester-menus/main-menu/Main-Menu.html">Main Menu</a>
+    <a href="bold-forester-images/bold-forester-menus/sunday-menu/Sunday-Menu.html">Sunday Menu</a>
+    <a href="bold-forester-images/bold-forester-menus/kids-menu/Kids-Menu.html">Kids Menu</a>
+    <a href="bold-forester-images/bold-forester-menus/desserts-menu/Desserts-Menu.html">Desserts Menu</a>
   </div>
 
   <h2>Drink Menus</h2>
   <div class="buttons">
-    <a href="bold-forester-images/bold-forester-menus/drinks-menu/updated-drinks-menu-25th-feb.html">Drinks Menu</a>
-    <a href="menus/lambinn-wine.html">Wine List</a>
-    <a href="bold-forester-images/bold-forester-menus/cocktail-menu/Cocktail-Menu-2025.html">Cocktail Menu</a>
-  </div>
-
-  <h2>What’s On</h2>
-  <div class="buttons">
-    <a href="bold-forester-images/Events-Promotions/events.html">View Events</a>
-    <a href="bold-forester-images/Events-Promotions/promotions.html">View Promotions</a>
-  </div>
-
-  <h2>Follow Us</h2>
-  <div class="social-scroll">
-    <a href="https://www.facebook.com/p/The-Bold-Forester-New-Forest-100063726363407/" class="social-card">Facebook</a>
-    <a href="https://www.instagram.com/the_bold_forester/" class="social-card">Instagram</a>
-    <a href="https://www.tiktok.com/@theboldforester_" class="social-card">TikTok</a>
-    <a href="https://twitter.com/ForesterBold" class="social-card">X</a>
-    <a href="https://www.linkedin.com/company/the-bold-forester-new-forest/" class="social-card">LinkedIn</a>
+    <a href="bold-forester-images/bold-forester-menus/drinks-menu/Drinks-Menu.html">Drinks Menu</a>
+    <a href="menus/bold-forester-wine.html">Wine List</a>
+    <a href="Cocktail-Menu-2025.html">Cocktail Menu</a>
   </div>
 
   <h2>Extras</h2>
-<div class="buttons">
-  <a href="tel:02380175588">📞 Call Us</a>
-  <a href="https://www.theboldforesternewforest.co.uk/food/#_restaurant_form">Book a Table</a>
-  <a href="https://www.theboldforesternewforest.co.uk/">Official Website</a>
-  <a href="home.html">⬅ Back to Home</a>
-</div>
+  <div class="buttons">
+    <a href="tel:02380867564">📞 Call Us</a>
+    <a href="https://www.boldforesterpub.co.uk/food/#_restaurant_form">Book a Table</a>
+    <a href="https://www.boldforesterpub.co.uk/">Official Website</a>
+    <a href="home.html">⬅ Back to Home</a>
+  </div>
 
   <div class="opening-times">
-  <h3>Opening Times</h3>
-  <p><strong>Pub</strong><br>
-    Monday – Saturday: 11:00 – 23:00<br>
-    Sunday: 11:00 – 22:30
-  </p>
-  <p><strong>Food</strong><br>
-    Monday – Saturday: 11:30 – 21:30<br>
-    Sunday: 11:30 – 21:00
-  </p>
-
-  <p>
-    📧 <a href="mailto:info@theboldforesternewforest.co.uk" class="email-link"><strong>Email us</strong></a>
-  </p>
-</div>
+    <h3>Opening Times</h3>
+    <p><strong>Pub</strong><br>
+      Monday – Saturday: 11:00 – 23:00<br>
+      Sunday: 12:00 – 22:30
+    </p>
+    <p><strong>Food</strong><br>
+      Monday – Saturday: 12:00 – 21:30<br>
+      Sunday: 12:00 – 21:00
+    </p>
+    <p>
+      📧 <a href="mailto:info@boldforesterpub.co.uk" class="email-link"><strong>Email us</strong></a>
+    </p>
+  </div>
 
   <footer>
     © 2025 Country Inns – The Bold Forester
   </footer>
+</body>
+</html>
